# ranger_description

./: CMakeLists.txt  README.md  README.txt  display.launch  manifest.xml  package.xml  ranger.urdf  upload_ranger.launch
config/: custom_ranger.rviz
launch/: display.launch  upload_ranger.launch
meshes/: wheel.dae
urdf/: ranger.urdf
urdf/meshes/: eye.dae  ranger.blend  ranger.dae
