<?xml version="1.0"?>
<package>
  <name>ranger_description</name>
  <version>0.0.0</version>
  <description>The ranger_description package</description>

  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>


  <export>
  </export>
</package>
